Fix to the bottom overlapping of the presentation content

--- a/css/main.css
+++ b/css/main.css
@@ -236,13 +236,13 @@ a:hover,
 }
 
 .presentation-content {
-	position: relative;
+	position: absolute;
 	top: 0;
-	bottom: 70px;
-	width: 80%;
 	margin: auto;
-	height: 100%;
 	max-width: 800px;
+	bottom: 70px;
+	left: 0;
+	right: 0;
 }
 
 .presentation-frame {
